fix: alignment styles fixed

--- a/src/PlacesToStay/PlacesToStay.css
+++ b/src/PlacesToStay/PlacesToStay.css
@@ -92,7 +92,7 @@
         justify-content: center;
         align-items: center;
         margin: 50px 100px;
-        margin-left: 160px;
+        margin-left: 145px;
     }
 
 
